buttons overlaps were fixed

--- a/css/main.css
+++ b/css/main.css
@@ -470,10 +470,6 @@ body {
   }
 }
 
-.mobile-menu {
-  z-index: 5;
-}
-
 @media screen and (min-width: 768px) {
   .mobile-menu {
     display: -webkit-box;
@@ -513,6 +509,7 @@ body {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    z-index: 5;
   }
 }
 
@@ -1328,7 +1325,7 @@ body {
   opacity: 1;
   -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  z-index: 2;
+  z-index: 10;
 }
 
 .backdrop--hidden {
